Resolved Checkout alignment

--- a/src/Components/Breadcrumbs/Breadcrum.css
+++ b/src/Components/Breadcrumbs/Breadcrum.css
@@ -1,6 +1,7 @@
 .breadcrum{
     display: flex;
     align-items: center;
+    justify-content: left;
     gap: 8px;
     color: #5e5e5e;
     font-size: 16px;
