--- a/src/Components/ProductDisplay/ProductDisplay.css
+++ b/src/Components/ProductDisplay/ProductDisplay.css
@@ -1,5 +1,7 @@
 .productdisplay {
     display: flex;
+    align-items:center ;
+    justify-content: center;
     margin: 0px 170px;
 }
 
